# speech_recognition_demo

./: CMakeLists.txt  Main.qml  README.md  main.cpp  main.qml  test.pcm
